@@ -1,7 +1,11 @@
 [buildout]
-parts = test
+parts = test checker
 develop = .
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = z3c.recipe.i18n [test]
+
+[checker]
+recipe = lovely.recipe:importchecker
+path = src/z3c/recipe/i18n
