@@ -62,18 +62,31 @@ setup(
     extras_require = dict(
         test = [
             'zope.testing',
-            'zope.app.locales',
             'zc.lockfile',
+                      'zope.app.component',
+                      'zope.app.publication',
+                      'zope.component',
+                      'zope.configuration',
+                      'zope.container',
+                      'zope.error',
+                      'zope.event',
+                      'zope.interface',
+                      'zope.location',
+                      'zope.processlifetime',
+                      'zope.session',
+                      'zope.site',
+                      'zope.security',
+                      'zope.traversing',
+                      'ZODB3',
             ],
         ),
     install_requires = [
-        'ZConfig >=2.4a5',
         'setuptools',
         'zc.buildout',
         'zc.recipe.egg',
-        'zope.testing',
+        'zope.app.appsetup',
+        'zope.app.locales',
         'zope.configuration',
-        'zc.lockfile',
         ],
     entry_points = {
         'zc.buildout': [
