@@ -24,45 +24,45 @@ to define eggs as source where we extract the messages from.
 Options
 *******
 
-The 'app' recipe accepts the following options:
+The i18n recipe accepts the following options:
 
 eggs
-The names of one or more eggs, with their dependencies that should
-be included in the Python path of the generated scripts.
+  The names of one or more eggs, with their dependencies that should
+  be included in the Python path of the generated scripts.
 
 packages
-The names of one or more eggs which the messages should get extracted from.
-Note, this is different to the original zope.app.locales implementation.
-The original implementation uses one path as -d argument which assumes a 
-specific zope.* package structure with a lod style trunk setup.
+  The names of one or more eggs which the messages should get extracted from.
+  Note, this is different to the original zope.app.locales implementation.
+  The original implementation uses one path as -d argument which assumes a 
+  specific zope.* package structure with an old style trunk setup.
 
 domain
-The translation domain.
+  The translation domain.
 
 output
-The path of the output file relative to the package root.
+  The path of the output file relative to the package root.
 
 maker
-One or more module name which can get used as additional maker. This module
-must be located in the python path because it get resolved by
-zope.configuration.name.resolve. For a sample maker see 
-z3c.csvvocabulary.csvStrings.
+  One or more module name which can get used as additional maker. This module
+  must be located in the python path because it get resolved by
+  zope.configuration.name.resolve. For a sample maker see 
+  z3c.csvvocabulary.csvStrings.
 
 zcml (required)
-The contents of configuration used for extraction. Normaly used for load 
-meta configuration.
+  The contents of configuration used for extraction. Normaly used for load 
+  meta configuration.
 
 excludeDefaultDomain (optional, default=False)
-Exclude all messages found as part of the default domain. Messages are in
-this domain, if their domain could not be determined. This usually happens
-in page template snippets. (False if not used)
+  Exclude all messages found as part of the default domain. Messages are in
+  this domain, if their domain could not be determined. This usually happens
+  in page template snippets. (False if not used)
 
 pythonOnly (optional, default=False)
-Only extract message ids from Python (False if not used)
+  Only extract message ids from Python (False if not used)
 
 exludeDirectoryName (optional, default=[])
-Allows to specify one or more directory name, relative to the package, to 
-exclude. (None if not used)
+  Allows to specify one or more directory name, relative to the package, to 
+  exclude. (None if not used)
 
 environment
   A section name defining a set of environment variables that should be 
@@ -75,114 +75,119 @@ Test
 
 Lets define some (bogus) eggs that we can use in our application:
 
->>> mkdir('outputDir')
->>> mkdir('demo1')
->>> write('demo1', 'setup.py',
-... '''
-... from setuptools import setup
-... setup(name = 'demo1')
-... ''')
+  >>> mkdir('outputDir')
+  >>> mkdir('demo1')
+  >>> write('demo1', 'setup.py',
+  ... '''
+  ... from setuptools import setup
+  ... setup(name = 'demo1')
+  ... ''')
+  
+  >>> mkdir('demo2')
+  >>> write('demo2', 'setup.py',
+  ... '''
+  ... from setuptools import setup
+  ... setup(name = 'demo2', install_requires='demo1')
+  ... ''')
 
->>> mkdir('demo2')
->>> write('demo2', 'setup.py',
-... '''
-... from setuptools import setup
-... setup(name = 'demo2', install_requires='demo1')
-... ''')
+Now check if the setup was correct:
+
+  >>> ls('bin')
+  -  buildout
 
 Lets create a minimal `buildout.cfg` file:
 
->>> write('buildout.cfg',
-... '''
-... [buildout]
-... parts = i18n
-... offline = true
-...
-... [i18n]
-... recipe = z3c.recipe.i18n:i18n
-... eggs = z3c.recipe.i18n
-... packages = demo1
-... domain = recipe
-... output = outputDir
-... zcml = <include package="z3c.recipe.tests" file="extract.zcml" />"
-... ''' % globals())
+  >>> write('buildout.cfg',
+  ... '''
+  ... [buildout]
+  ... parts = i18n
+  ... offline = true
+  ...
+  ... [i18n]
+  ... recipe = z3c.recipe.i18n:i18n
+  ... eggs = z3c.recipe.i18n
+  ... packages = demo1
+  ... domain = recipe
+  ... output = outputDir
+  ... zcml = <include package="z3c.recipe.tests" file="extract.zcml" />"
+  ... ''' % globals())
 
 Now, Let's run the buildout and see what we get:
 
->>> print system(join('bin', 'buildout')),
-Installing i18n.
-i18n: setting up i18n tools
-Generated script '/sample-buildout/bin/i18nextract'.
-Generated script '/sample-buildout/bin/i18nmergeall'.
-Generated script '/sample-buildout/bin/i18nstats'.
-Generated script '/sample-buildout/bin/i18ncompile'.
+  >>> print system(join('bin', 'buildout')),
+  Installing i18n.
+  i18n: setting up i18n tools
+  Generated script '/sample-buildout/bin/i18nextract'.
+  Generated script '/sample-buildout/bin/i18nmergeall'.
+  Generated script '/sample-buildout/bin/i18nstats'.
+  Generated script '/sample-buildout/bin/i18ncompile'.
 
 After running buildout, the bin folder contains the different i18n script:
 
->>> ls('bin')
--  buildout
--  i18ncompile
--  i18nextract
--  i18nmergeall
--  i18nstats
+  >>> ls('bin')
+  -  buildout
+  -  i18ncompile
+  -  i18nextract
+  -  i18nmergeall
+  -  i18nstats
 
 i18nextract
 -----------
 
 The i18nextract.py contains the following code:
 
->>> cat('bin', 'i18nextract')
-<BLANKLINE>
-import sys
-sys.path[0:0] = [
-...
-  ]
-<BLANKLINE>
-import os
-sys.argv[0] = os.path.abspath(sys.argv[0])
-os.chdir('...src')
-<BLANKLINE>
-<BLANKLINE>
-import z3c.recipe.i18n.i18nextract
-<BLANKLINE>
-if __name__ == '__main__':
-    z3c.recipe.i18n.i18nextract.main(['i18nextract', '-d', 'recipe', '-s', '/sample-buildout/parts/i18n/configure.zcml', '-o', '/sample-buildout/outputDir', '-p', 'demo1'])
+  >>> cat('bin', 'i18nextract')
+  <BLANKLINE>
+  import sys
+  sys.path[0:0] = [
+  ...
+    ]
+  <BLANKLINE>
+  import os
+  sys.argv[0] = os.path.abspath(sys.argv[0])
+  os.chdir('...src')
+  <BLANKLINE>
+  <BLANKLINE>
+  import z3c.recipe.i18n.i18nextract
+  <BLANKLINE>
+  if __name__ == '__main__':
+      z3c.recipe.i18n.i18nextract.main(['i18nextract', '-d', 'recipe', '-s', '/sample-buildout/parts/i18n/configure.zcml', '-o', '/sample-buildout/outputDir', '-p', 'demo1'])
 
 i18nmergeall
 ------------
 
 The i18nmergeall.py contains the following code:
 
->>> cat('bin', 'i18nmergeall')
-#!C:\Python24\python.exe
-<BLANKLINE>
-import sys
-sys.path[0:0] = [
-  ...
-  ]
-<BLANKLINE>
-import z3c.recipe.i18n.i18nmergeall
-<BLANKLINE>
-if __name__ == '__main__':
-    z3c.recipe.i18n.i18nmergeall.main(['i18nmergeall', '-l', '...outputDir'])
+  >>> cat('bin', 'i18nmergeall')
+  #!C:\Python24\python.exe
+  <BLANKLINE>
+  import sys
+  sys.path[0:0] = [
+    ...
+    ]
+  <BLANKLINE>
+  import z3c.recipe.i18n.i18nmergeall
+  <BLANKLINE>
+  if __name__ == '__main__':
+      z3c.recipe.i18n.i18nmergeall.main(['i18nmergeall', '-l', '...outputDir'])
 
 i18nstats
 ---------
 
 The i18nstats.py contains the following code:
 
->>> cat('bin', 'i18nstats')
-#!C:\Python24\python.exe
-<BLANKLINE>
-import sys
-sys.path[0:0] = [
-  ...
-  ]
-<BLANKLINE>
-import z3c.recipe.i18n.i18nstats
-<BLANKLINE>
-if __name__ == '__main__':
-    z3c.recipe.i18n.i18nstats.main(['i18nstats', '-l', '...outputDir'])
+  >>> cat('bin', 'i18nstats')
+  #!C:\Python24\python.exe
+  <BLANKLINE>
+  import sys
+  sys.path[0:0] = [
+    ...
+    ]
+  <BLANKLINE>
+  import z3c.recipe.i18n.i18nstats
+  <BLANKLINE>
+  if __name__ == '__main__':
+      z3c.recipe.i18n.i18nstats.main(['i18nstats', '-l', '...outputDir'])
 
 
 i18ncompile
@@ -190,18 +195,18 @@ i18ncompile
 
 The i18ncompile.py contains the following code:
 
->>> cat('bin', 'i18ncompile')
-#!C:\Python24\python.exe
-<BLANKLINE>
-import sys
-sys.path[0:0] = [
-  ...
-  ]
-<BLANKLINE>
-import z3c.recipe.i18n.i18ncompile
-<BLANKLINE>
-if __name__ == '__main__':
-    z3c.recipe.i18n.i18ncompile.main(['i18ncompile', '-l', '...outputDir'])
+  >>> cat('bin', 'i18ncompile')
+  #!C:\Python24\python.exe
+  <BLANKLINE>
+  import sys
+  sys.path[0:0] = [
+    ...
+    ]
+  <BLANKLINE>
+  import z3c.recipe.i18n.i18ncompile
+  <BLANKLINE>
+  if __name__ == '__main__':
+      z3c.recipe.i18n.i18ncompile.main(['i18ncompile', '-l', '...outputDir'])
 
 
 Full Sample
@@ -209,105 +214,105 @@ Full Sample
 
 Lets create a `buildout.cfg` file using all available arguments:
 
->>> write('buildout.cfg',
-... '''
-... [buildout]
-... parts = i18n
-... offline = true
-...
-... [testenv]
-... fooDir = ${buildout:directory}/parts/foo
-...
-... [i18n]
-... recipe = z3c.recipe.i18n:i18n
-... eggs = z3c.recipe.i18n
-... packages = demo1
-... domain = recipe
-... output = outputDir
-... zcml = <include package="z3c.recipe.tests" file="extract.zcml" />"
-... maker = z3c.csvvocabulary.csvStrings
-... excludeDefaultDomain = true
-... pythonOnly = true
-... exludeDirectoryName = foo
-...                       bar
-... environment = testenv
-... ''' % globals())
+  >>> write('buildout.cfg',
+  ... '''
+  ... [buildout]
+  ... parts = i18n
+  ... offline = true
+  ...
+  ... [testenv]
+  ... fooDir = ${buildout:directory}/parts/foo
+  ...
+  ... [i18n]
+  ... recipe = z3c.recipe.i18n:i18n
+  ... eggs = z3c.recipe.i18n
+  ... packages = demo1
+  ... domain = recipe
+  ... output = outputDir
+  ... zcml = <include package="z3c.recipe.tests" file="extract.zcml" />"
+  ... maker = z3c.csvvocabulary.csvStrings
+  ... excludeDefaultDomain = true
+  ... pythonOnly = true
+  ... exludeDirectoryName = foo
+  ...                       bar
+  ... environment = testenv
+  ... ''' % globals())
 
 Now, Let's run the buildout and see what we get:
 
->>> print system(join('bin', 'buildout')),
-Uninstalling i18n.
-Installing i18n.
-i18n: setting up i18n tools
-Generated script '/sample-buildout/bin/i18nextract'.
-Generated script '/sample-buildout/bin/i18nmergeall'.
-Generated script '/sample-buildout/bin/i18nstats'.
-Generated script '/sample-buildout/bin/i18ncompile'.
+  >>> print system(join('bin', 'buildout')),
+  Uninstalling i18n.
+  Installing i18n.
+  i18n: setting up i18n tools
+  Generated script '/sample-buildout/bin/i18nextract'.
+  Generated script '/sample-buildout/bin/i18nmergeall'.
+  Generated script '/sample-buildout/bin/i18nstats'.
+  Generated script '/sample-buildout/bin/i18ncompile'.
 
 After running buildout, the bin folder contains the different i18n script:
 
->>> ls('bin')
--  buildout
--  i18ncompile
--  i18nextract
--  i18nmergeall
--  i18nstats
+  >>> ls('bin')
+  -  buildout
+  -  i18ncompile
+  -  i18nextract
+  -  i18nmergeall
+  -  i18nstats
 
 i18nextract
 -----------
 
 The i18nextract.py contains the following code:
 
->>> cat('bin', 'i18nextract')
-<BLANKLINE>
-import sys
-sys.path[0:0] = [
-...
-  ]
-<BLANKLINE>
-import os
-sys.argv[0] = os.path.abspath(sys.argv[0])
-os.chdir('...src')
-os.environ['fooDir'] = '/sample-buildout/parts/foo'
-<BLANKLINE>
-<BLANKLINE>
-import z3c.recipe.i18n.i18nextract
-<BLANKLINE>
-if __name__ == '__main__':
-    z3c.recipe.i18n.i18nextract.main(['i18nextract', '-d', 'recipe', '-s', '/sample-buildout/parts/i18n/configure.zcml', '-o', '/sample-buildout/outputDir', '--exclude-default-domain', '--python-only', '-m', 'z3c.csvvocabulary.csvStrings', '-p', 'demo1', '-x', 'foo', '-x', 'bar'])
+  >>> cat('bin', 'i18nextract')
+  <BLANKLINE>
+  import sys
+  sys.path[0:0] = [
+  ...
+    ]
+  <BLANKLINE>
+  import os
+  sys.argv[0] = os.path.abspath(sys.argv[0])
+  os.chdir('...src')
+  os.environ['fooDir'] = '/sample-buildout/parts/foo'
+  <BLANKLINE>
+  <BLANKLINE>
+  import z3c.recipe.i18n.i18nextract
+  <BLANKLINE>
+  if __name__ == '__main__':
+      z3c.recipe.i18n.i18nextract.main(['i18nextract', '-d', 'recipe', '-s', '/sample-buildout/parts/i18n/configure.zcml', '-o', '/sample-buildout/outputDir', '--exclude-default-domain', '--python-only', '-m', 'z3c.csvvocabulary.csvStrings', '-p', 'demo1', '-x', 'foo', '-x', 'bar'])
 
 i18nmergeall
 ------------
 
 The i18nmergeall.py contains the following code:
 
->>> cat('bin', 'i18nmergeall')
-#!C:\Python24\python.exe
-<BLANKLINE>
-import sys
-sys.path[0:0] = [
-...
-  ]
-<BLANKLINE>
-import z3c.recipe.i18n.i18nmergeall
-<BLANKLINE>
-if __name__ == '__main__':
-    z3c.recipe.i18n.i18nmergeall.main(['i18nmergeall', '-l', '...outputDir'])
+  >>> cat('bin', 'i18nmergeall')
+  #!C:\Python24\python.exe
+  <BLANKLINE>
+  import sys
+  sys.path[0:0] = [
+  ...
+    ]
+  <BLANKLINE>
+  import z3c.recipe.i18n.i18nmergeall
+  <BLANKLINE>
+  if __name__ == '__main__':
+      z3c.recipe.i18n.i18nmergeall.main(['i18nmergeall', '-l', '...outputDir'])
 
 i18nstats
 ---------
 
 The i18nstats.py contains the following code:
 
->>> cat('bin', 'i18nstats')
-#!C:\Python24\python.exe
-<BLANKLINE>
-import sys
-sys.path[0:0] = [
-...
-  ]
-<BLANKLINE>
-import z3c.recipe.i18n.i18nstats
-<BLANKLINE>
-if __name__ == '__main__':
-    z3c.recipe.i18n.i18nstats.main(['i18nstats', '-l', '...outputDir'])
+  >>> cat('bin', 'i18nstats')
+  #!C:\Python24\python.exe
+  <BLANKLINE>
+  import sys
+  sys.path[0:0] = [
+  ...
+    ]
+  <BLANKLINE>
+  import z3c.recipe.i18n.i18nstats
+  <BLANKLINE>
+  if __name__ == '__main__':
+      z3c.recipe.i18n.i18nstats.main(['i18nstats', '-l', '...outputDir'])
